# Noise-Reduction-Hackathon

./: README.md
LSTM-Model/: Noise_Lower_LSTM_계산.ipynb
Noise-decrease-web/: pyproject.toml  readme.md
Noise-decrease-web/static/css/: styles.css
Noise-decrease-web/static/js/: script.js
Noise-decrease-web/templates/: index.html
